--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="main-menu-items">
             <li class="main-menu-item  item-search">
-              <span><input type="search" placeholder="Поиск"></span>
+              <span><input class="search-field" type="search" placeholder="Поиск"></span>
               <a href="#">
                 <svg height="17" width="17">
                   <use xlink:href="#search"></use>
@@ -166,7 +166,7 @@
         <div class="products-items-wrapper">
           <ul class="products-items">
             <li class="products-item">
-              <a href="#" class="product-inner">
+              <div href="#" class="product-inner">
                 <div class="img-wrap">
                   <img src="img/bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                   <div class="btns-wrap">
@@ -184,10 +184,10 @@
                   <p class="is-sale">32500 Р.</p>
                   <span>25500 Р.</span>
                 </div>
-              </a>
+              </div>
             </li>
             <li class="products-item new-card catalog-item new-card" data-parent="NEW">
-              <a href="#" class="product-inner">
+              <div href="#" class="product-inner">
                 <div class="img-wrap">
                   <img src="img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="btns-wrap">
@@ -205,10 +205,10 @@
                   <p class="is-sale">22500 Р.</p>
                   <span>15500 Р.</span>
                 </div>
-              </a>
+              </div>
             </li>
             <li class="products-item">
-              <a href="#" class="product-inner">
+              <div href="#" class="product-inner">
                 <div class="img-wrap">
                   <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   <div class="btns-wrap">
@@ -226,10 +226,10 @@
                   <p>30500 Р.</p>
                   <span>25500 Р.</span>
                 </div>
-              </a>
+              </div>
             </li>
             <li class="products-item is-not-sale new-card" data-parent="NEW">
-              <a href="#" class="product-inner">
+              <div href="#" class="product-inner">
                 <div class="img-wrap">
                   <img src="img/bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                   <div class="btns-wrap">
@@ -247,7 +247,7 @@
                   <p>0</p>
                   <span>12500 Р.</span>
                 </div>
-              </a>
+              </div>
             </li>
           </ul>
         </div>
@@ -259,14 +259,38 @@
         </div>
         <div class="firms-items-wrapper">
           <ul class="firms-items">
-            <li class="firms-item"> <img src="img/bosch.png" width="220" height="145" alt="BOSCH"></li>
-            <li class="firms-item"> <img src="img/makita.png" width="220" height="145" alt="makita"></li>
-            <li class="firms-item"> <img src="img/dewalt.png" width="220" height="145" alt="dewalt"></li>
-            <li class="firms-item"> <img src="img/interkom.png" width="220" height="145" alt="interkom"></li>
-            <li class="firms-item"> <img src="img/hitachi.png" width="220" height="145" alt="hitachi"></li>
-            <li class="firms-item"> <img src="img/lg.png" width="220" height="145" alt="aeg"></li>
-            <li class="firms-item"> <img src="img/aeg.png" width="220" height="145" alt="aeg"></li>
-            <li class="firms-item"> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
+            <li class="firms-item"> 
+              <img src="img/bosch.png" width="220" height="145" alt="BOSCH">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/makita.png" width="220" height="145" alt="makita">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/dewalt.png" width="220" height="145" alt="dewalt">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/interkom.png" width="220" height="145" alt="interkom">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/hitachi.png" width="220" height="145" alt="hitachi">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/lg.png" width="220" height="145" alt="aeg">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/aeg.png" width="220" height="145" alt="aeg">
+              <a href="#"></a>
+            </li>
+            <li class="firms-item"> 
+              <img src="img/metabo.png" width="220" height="145" alt="metabo">
+              <a href="#"></a>
+            </li>
           </ul>
         </div>
       </section>
