--- a/catalog.html
+++ b/catalog.html
@@ -14,17 +14,20 @@
     <div class="main-container">
       <div class="main-container-wrapper">
         <section class="main-menu center">
-          <a class="main-menu-logo">
+          <a class="main-menu-logo" href="index.html" tabindex="0">
             <img src="img/logo-t.svg" width="108" height="18" alt="ТЕХНОМАРТ">
           </a>
           <ul class="main-menu-items">
             <li class="main-menu-item  item-search">
-              <span><input type="search" class="search-field" placeholder="Поиск"></span>
-              <a href="#">
-                <svg height="17" width="17">
-                  <use xlink:href="#search"></use>
-                </svg>
-              </a>
+              <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+                <label class="visually-hidden" for="search-inpun">поле поиска</label>
+                <input class="search-field" id="search-inpun" type="search" name="search" placeholder="Поиск">
+                <button href="#" type="submit" type="submit" class="btn-search">
+                  <svg height="17" width="17">
+                    <use xlink:href="#search"></use>
+                  </svg>
+                </button>
+              </form>
             </li>
             <li class="main-menu-item item-bookmark">
               <a href="#">
@@ -77,7 +80,7 @@
       <div class="main-navigation-wrapper">
         <nav class="center">
           <ul class="site-navigation">
-            <li><a href="#">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="#">Компания</a></li>
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Новости</a></li>
@@ -204,7 +207,7 @@
           <div class="products-items-wrapper">
             <ul class="products-items">
               <li class="products-item">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                     <div class="btns-wrap">
@@ -212,9 +215,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -225,7 +228,7 @@
                 </div>
               </li>
               <li class="products-item">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                     <div class="btns-wrap">
@@ -233,9 +236,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -246,7 +249,7 @@
                 </div>
               </li>
               <li class="products-item new-card" data-status="NEW">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                     <div class="btns-wrap">
@@ -254,9 +257,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -267,7 +270,7 @@
                 </div>
               </li>
               <li class="products-item new-card catalog-item new-card" data-status="NEW">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                     <div class="btns-wrap">
@@ -275,9 +278,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -288,7 +291,7 @@
                 </div>
               </li>
               <li class="products-item">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                     <div class="btns-wrap">
@@ -296,9 +299,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -309,7 +312,7 @@
                 </div>
               </li>
               <li class="products-item is-not-sale new-card" data-status="NEW">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                     <div class="btns-wrap">
@@ -317,9 +320,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -330,7 +333,7 @@
                 </div>
               </li>
               <li class="products-item new-card catalog-item" data-status="NEW">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                     <div class="btns-wrap">
@@ -338,9 +341,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -351,7 +354,7 @@
                 </div>
               </li>
               <li class="products-item">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                     <div class="btns-wrap">
@@ -359,9 +362,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -372,7 +375,7 @@
                 </div>
               </li>
               <li class="products-item is-not-sale new-card" data-status="NEW">
-                <div href="#" class="product-inner">
+                <div class="product-inner">
                   <div class="img-wrap">
                     <img src="img/bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                     <div class="btns-wrap">
@@ -380,9 +383,9 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close">Купить</button>
+                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -467,12 +470,12 @@
               <li>
                 <a class="social-button" href="#">
                   <svg height="14" width="25" class="icon">
-                    <use xlink:href="#Shape"></use>
+                    <use xlink:href="#vk"></use>
                   </svg></a>
               </li>
               <li>
                 <a class="social-button" href="#"> <svg height="22" width="12" class="icon">
-                    <use xlink:href="#Shape (1)"></use>
+                    <use xlink:href="#fb"></use>
                   </svg></a>
               </li>
               <li>
@@ -502,7 +505,7 @@
       <div class="modal-order-wrap">
       <div class="modal-wrap modal-wrap-order">
         <div class="modal-name-wrap modal-order-content">
-          <img src="img/icon-mark.png" width="66" height="66">
+          <img src="img/icon-mark.png" width="66" height="66" alt="">
           <p>Товар добавлен в корзину!</p>
         </div>
       </div>
@@ -584,15 +587,15 @@
         d="M27.406 71.877c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zm17.438 0c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zM29.335 10.553l7.547 5.416a2.007 2.007 0 0 0 2.818-.487 2.066 2.066 0 0 0-.48-2.855l-2.373-1.703 9.436-5.02 4.628 11.85h4.347L49.214 2.276a2.037 2.037 0 0 0-1.177-1.166 1.995 1.995 0 0 0-1.643.107l-13.248 7.05-3.022-2.17a2.004 2.004 0 0 0-2.742.385l-8.481 10.65c-.17.182-.307.392-.405.62h5.106l5.733-7.2z"
         fill="#FFFFFF"></path>
     </symbol>
-    <symbol viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" id="icon-insta">
+    <symbol role="img" aria-label="Логотип инстаграм" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" id="icon-insta">
       <path fill-rule="evenodd" clip-rule="evenodd"
         d="M3 0h15c1.65 0 3 1.35 3 3v15c0 1.65-1.35 3-3 3H3c-1.65 0-3-1.35-3-3V3c0-1.65 1.35-3 3-3zm11 10.5C14 8.57 12.43 7 10.5 7S7 8.57 7 10.5 8.57 14 10.5 14s3.5-1.57 3.5-3.5zM3 18V9h1.181A6.48 6.48 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.451 6.451 0 0 0-.181-1.5H18v9H3zM14 7h4V3h-4v4z"
         fill="#fff"></path>
     </symbol>
-    <symbol viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg" id="Shape (1)">
+    <symbol role="img" aria-label="Логотип фэйсбук" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg" id="fb">
       <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"></path>
     </symbol>
-    <symbol viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg" id="Shape">
+    <symbol role="img" aria-label="Логотип Вконтакте" viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg" id="vk">
       <path
         d="M15.54 11.728c.92-.29 2.1 1.913 3.354 2.755.942.639 1.663.501 1.663.501l3.345-.047s1.747-.105.921-1.457c-.068-.112-.484-1.002-2.489-2.833-2.096-1.915-1.812-1.605.712-4.916 1.538-2.019 2.153-3.251 1.96-3.776-.185-.506-1.314-.374-1.314-.374l-3.768.025c-.367 0-.678.111-.82.483-.003.003-.598 1.562-1.391 2.886-1.677 2.802-2.346 2.952-2.623 2.776-.637-.406-.476-1.628-.476-2.497 0-2.716.416-3.849-.815-4.141-.411-.098-.711-.161-1.76-.17-1.34-.02-2.479 0-3.124.308-.428.209-.757.667-.557.693.25.033.811.15 1.112.55.386.517.374 1.677.374 1.677s.22 3.198-.52 3.594c-.508.272-1.203-.283-2.699-2.827-.763-1.301-1.34-2.74-1.34-2.74s-.112-.267-.314-.413a1.583 1.583 0 0 0-.578-.229L.817 1.58s-.538.015-.735.245c-.175.205-.015.627-.015.627s2.802 6.45 5.974 9.7c2.908 2.983 6.213 2.785 6.213 2.785h1.497s.452-.05.683-.292c.216-.225.206-.648.206-.648s-.03-1.977.9-2.268z"
         fill="#fff"></path>
