поправил по требованиям

--- a/catalog.html
+++ b/catalog.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cuprum&family=PT+Sans&display=swap" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
 
 <body class="page-body">
   <header class="main-header">
@@ -36,7 +39,6 @@
                 </svg>
                 <span> Закладки: 0</span>
               </a>
-
             </li>
             <li class="main-menu-item item-cart">
               <a href="#">
@@ -62,19 +64,26 @@
                   </svg> +7&nbsp;(812)&nbsp;555-05-55
                 </a>
               </span>
-
             </p>
             <span class="main-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
           </div>
+          <div class="main-login-wrapper">
           <p class="main-login">
             <a class="main-login-button main-login-button-login" href="#">
-              <svg height="17" width="20">
-                <use xlink:href="#login"></use>
-              </svg> Войти</a>
-            <a class="main-login-button main-login-button-singup" href="#">
-              Регистрация
-            </a>
+              <svg height="18" width="20" class="icon-login-user">
+                <use xlink:href="#icon-user"></use>
+              </svg>
+                 Равшан Джамшутович
+              <svg height="17" width="20" class="icon">
+                <use xlink:href="#icon-login"></use>
+              </svg></a>
+              
           </p>
+           <p class="user-menu-wrapper">
+              <span class="user-menu">Мои заказы</span>
+              <span class="user-menu">Личный кабинет</span>
+            </p>
+        </div>
         </section>
       </div>
       <div class="main-navigation-wrapper">
@@ -215,9 +224,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -236,9 +247,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -257,9 +270,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -278,9 +293,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -299,9 +316,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -320,9 +339,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -341,9 +362,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -362,9 +385,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -383,9 +408,11 @@
                         <svg height="15" width="15">
                           <use xlink:href="#cart"></use>
                         </svg>
-                        <button class="btns-close" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                        <button class="btns-close"
+                          aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                       </div>
-                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                      <button class="btns-add" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В
+                        закладки</button>
                     </div>
                   </div>
                   <div class="price-wrap">
@@ -503,17 +530,17 @@
   <section class="modal modal-order">
     <form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="modal-order-wrap">
-      <div class="modal-wrap modal-wrap-order">
-        <div class="modal-name-wrap modal-order-content">
-          <img src="img/icon-mark.png" width="66" height="66" alt="">
-          <p>Товар добавлен в корзину!</p>
+        <div class="modal-wrap modal-wrap-order">
+          <div class="modal-name-wrap modal-order-content">
+            <img src="img/icon-mark.png" width="66" height="66" alt="">
+            <p>Товар добавлен в корзину!</p>
+          </div>
+        </div>
+        <div class="button-wrapper button-wrapper-order">
+          <button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
+          <button class="button" type="submit">ПРОДОЛЖИТЬ ПОКУПКИ</button>
         </div>
       </div>
-      <div class="button-wrapper button-wrapper-order">
-        <button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
-        <button class="button" type="submit">ПРОДОЛЖИТЬ ПОКУПКИ</button>
-      </div>
-    </div>
     </form>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
@@ -587,18 +614,32 @@
         d="M27.406 71.877c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zm17.438 0c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zM29.335 10.553l7.547 5.416a2.007 2.007 0 0 0 2.818-.487 2.066 2.066 0 0 0-.48-2.855l-2.373-1.703 9.436-5.02 4.628 11.85h4.347L49.214 2.276a2.037 2.037 0 0 0-1.177-1.166 1.995 1.995 0 0 0-1.643.107l-13.248 7.05-3.022-2.17a2.004 2.004 0 0 0-2.742.385l-8.481 10.65c-.17.182-.307.392-.405.62h5.106l5.733-7.2z"
         fill="#FFFFFF"></path>
     </symbol>
-    <symbol role="img" aria-label="Логотип инстаграм" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" id="icon-insta">
+    <symbol role="img" aria-label="Логотип инстаграм" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg"
+      id="icon-insta">
       <path fill-rule="evenodd" clip-rule="evenodd"
         d="M3 0h15c1.65 0 3 1.35 3 3v15c0 1.65-1.35 3-3 3H3c-1.65 0-3-1.35-3-3V3c0-1.65 1.35-3 3-3zm11 10.5C14 8.57 12.43 7 10.5 7S7 8.57 7 10.5 8.57 14 10.5 14s3.5-1.57 3.5-3.5zM3 18V9h1.181A6.48 6.48 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.451 6.451 0 0 0-.181-1.5H18v9H3zM14 7h4V3h-4v4z"
         fill="#fff"></path>
     </symbol>
-    <symbol role="img" aria-label="Логотип фэйсбук" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg" id="fb">
+    <symbol role="img" aria-label="Логотип фэйсбук" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg"
+      id="fb">
       <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"></path>
     </symbol>
-    <symbol role="img" aria-label="Логотип Вконтакте" viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg" id="vk">
+    <symbol role="img" aria-label="Логотип Вконтакте" viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg"
+      id="vk">
       <path
         d="M15.54 11.728c.92-.29 2.1 1.913 3.354 2.755.942.639 1.663.501 1.663.501l3.345-.047s1.747-.105.921-1.457c-.068-.112-.484-1.002-2.489-2.833-2.096-1.915-1.812-1.605.712-4.916 1.538-2.019 2.153-3.251 1.96-3.776-.185-.506-1.314-.374-1.314-.374l-3.768.025c-.367 0-.678.111-.82.483-.003.003-.598 1.562-1.391 2.886-1.677 2.802-2.346 2.952-2.623 2.776-.637-.406-.476-1.628-.476-2.497 0-2.716.416-3.849-.815-4.141-.411-.098-.711-.161-1.76-.17-1.34-.02-2.479 0-3.124.308-.428.209-.757.667-.557.693.25.033.811.15 1.112.55.386.517.374 1.677.374 1.677s.22 3.198-.52 3.594c-.508.272-1.203-.283-2.699-2.827-.763-1.301-1.34-2.74-1.34-2.74s-.112-.267-.314-.413a1.583 1.583 0 0 0-.578-.229L.817 1.58s-.538.015-.735.245c-.175.205-.015.627-.015.627s2.802 6.45 5.974 9.7c2.908 2.983 6.213 2.785 6.213 2.785h1.497s.452-.05.683-.292c.216-.225.206-.648.206-.648s-.03-1.977.9-2.268z"
         fill="#fff"></path>
+    </symbol>
+    <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 18" id="icon-user">
+      <path
+        d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39C-.026 14.902 0 18 0 18h20s.025-3.099-2.119-3.834z"
+        fill="#C5C5C5"></path>
+    </symbol>
+    <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 17" id="icon-login">
+      <path d="M20 8.5L11.125 0v6h-6v5h6v6L20 8.5z" fill="#C5C5C5"></path>
+      <path
+        d="M2.106 13.952V3.048c.018-.376.17-1.057 1.01-1.057h5.027V0H3.116C.938 0 .112 1.81.086 3.027v10.946C.113 15.189.939 17 3.117 17h5.027v-1.99H3.116c-.84 0-.992-.683-1.01-1.058z"
+        fill="#C5C5C5"></path>
     </symbol>
   </svg>
   <script src="js/catalog.js"></script>
