--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 </svg>
                 <span>Закладки: 0</span>
               </a>
-
             </li>
             <li class="main-menu-item item-cart">
               <a href="#">
@@ -160,10 +159,9 @@
                 <span class="slider-button slider-button-back"></span>
                 <span class="slider-button slider-button-next"></span>
               </div>
-              <a class="button" href="#">открыть каталог</a>
+              <a class="button" href="catalog.html">открыть каталог</a>
             </section>
           </li>
-
         </ul>
       </section>
       <section class="products">
