--- a/catalog.html
+++ b/catalog.html
@@ -136,9 +136,9 @@
                 <use xlink:href="#catalog-home"></use>
               </svg>
             </li>
-            <li class="nav-item-catalog">КАТАЛОГ</li>
-            <li class="nav-item-catalog">ИНСТРУМЕНТ</li>
-            <li class="nav-item-catalog">ПЕРФОРАТОРЫ</li>
+            <li class="nav-item-catalog"><a href="index.html">КАТАЛОГ</a></li>
+            <li class="nav-item-catalog"><a>ИНСТРУМЕНТ</a></li>
+            <li class="nav-item-catalog"><a>ПЕРФОРАТОРЫ</a></li>
           </ul>
         </section>
         <div class="container-title-wrapper">
@@ -672,8 +672,8 @@
           </ul>
         </section>
       </div>
-      <div class="perforator-description">
-        <section class="center">
+      <section class="perforator-description">
+        <div class="center">
           <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
           <p>
             Перфоратор — универсальный строительный инструмент. Предназначен для
@@ -684,16 +684,16 @@
             В ассортиментном ряду есть выбор «трехрежимников»: в одном
             устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer main-footer">
       <div class="page-footer-wrapper">
         <div class="page-info-wrapper">
-          <section class="footer-info center">
-            <section class="footer-contacts">
-              <a class="main-menu-logo">
+          <div class="footer-info center">
+            <div class="footer-contacts">
+              <a class="main-menu-logo" href="index.html">
                 <img
                   src="img/big-logo.svg"
                   width="138"
@@ -705,8 +705,8 @@
                 г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br />
                 +7 (812) 555-05-55
               </p>
-            </section>
-            <section class="footer-navigation">
+            </div>
+            <div class="footer-navigation">
               <ul class="navigation-wrapper">
                 <li><a href="#">Компания</a></li>
                 <li><a href="#">Новости</a></li>
@@ -720,16 +720,16 @@
                 <li><a href="#">Инструмент</a></li>
                 <li><a href="#">Спецпредложения</a></li>
               </ul>
-            </section>
-          </section>
+            </div>
+          </div>
         </div>
-        <section class="footer-bottom">
+        <div class="footer-bottom">
           <div class="footer-bottom-wrapper center">
             <span class="footer-bottom-title">
               © 2010–2019 Компания «Техномарт» <br />Все права защищены
             </span>
 
-            <section class="footer-social">
+            <div class="footer-social">
               <ul>
                 <li>
                   <a class="social-button" href="#">
@@ -750,7 +750,7 @@
                   ></a>
                 </li>
               </ul>
-            </section>
+            </div>
             <div class="footer-copyright-info">
               <p class="footer-copyright">
                 Обратная связь: <br />
@@ -762,11 +762,11 @@
               </p>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </footer>
 
-    <section class="modal modal-order">
+    <div class="modal modal-order">
       <form
         class="mail-form"
         action="https://echo.htmlacademy.ru"
@@ -786,7 +786,7 @@
         </div>
       </form>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
-    </section>
+    </div>
 
     <svg width="0" height="0" class="hidden">
       <symbol
