--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
     <footer class="page-footer main-footer">
       <div class="page-footer-wrapper">
         <div class="page-info-wrapper">
-          <section class="footer-info center">
-            <section class="footer-contacts">
-              <a class="main-menu-logo">
+          <div class="footer-info center">
+            <div class="footer-contacts">
+              <a class="main-menu-logo" href="index.html">
                 <img
                   src="img/big-logo.svg"
                   width="138"
@@ -600,8 +600,8 @@
                 г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br />
                 +7 (812) 555-05-55
               </p>
-            </section>
-            <section class="footer-navigation">
+            </div>
+            <div class="footer-navigation">
               <ul class="navigation-wrapper">
                 <li><a href="#">Компания</a></li>
                 <li><a href="#">Новости</a></li>
@@ -615,16 +615,16 @@
                 <li><a href="#">Инструмент</a></li>
                 <li><a href="#">Спецпредложения</a></li>
               </ul>
-            </section>
-          </section>
+            </div>
+          </div>
         </div>
-        <section class="footer-bottom">
+        <div class="footer-bottom">
           <div class="footer-bottom-wrapper center">
             <span class="footer-bottom-title">
               © 2010–2019 Компания «Техномарт» <br />Все права защищены
             </span>
 
-            <section class="footer-social">
+            <div class="footer-social">
               <ul>
                 <li>
                   <a class="social-button" href="#">
@@ -645,7 +645,7 @@
                   ></a>
                 </li>
               </ul>
-            </section>
+            </div>
             <div class="footer-copyright-info">
               <p class="footer-copyright">
                 Обратная связь: <br />
@@ -657,10 +657,10 @@
               </p>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </footer>
-    <section class="modal modal-login">
+    <div class="modal modal-login">
       <form
         class="mail-form"
         action="https://echo.htmlacademy.ru"
@@ -703,9 +703,9 @@
         </div>
       </form>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
-    </section>
+    </div>
 
-    <section class="modal modal-map">
+    <div class="modal modal-map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
         width="943"
@@ -714,7 +714,7 @@
         title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"
       ></iframe>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
-    </section>
+    </div>
 
     <svg width="0" height="0" class="hidden">
       <symbol
