--- a/catalog.html
+++ b/catalog.html
@@ -775,7 +775,7 @@
         <div class="modal-order-wrap">
           <div class="modal-wrap modal-wrap-order">
             <div class="modal-name-wrap modal-order-content">
-              <img src="img/icon-mark.png" width="66" height="66" alt="" />
+              <img src="img/icon-mark.png" width="66" height="66" alt="icon-mark" />
               <p>Товар добавлен в корзину!</p>
             </div>
           </div>
