--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 />
                 <label for="creditField">Кредит</label>
               </form>
-              <img class="services-form-line" src="img/line.png" alt="" />
+              <img class="services-form-line" src="img/line.png" height="279px" width= "10px" alt="line" />
             </div>
 
             <div
@@ -695,6 +695,7 @@
           </div>
           <p>
             <span>Текст письма:</span><br/>
+            <label class="visually-hidden" for="textarea"></label>
             <textarea id="textarea" rows="3">В свободной форме </textarea><br/>
           </p>
         </div>
@@ -885,7 +886,7 @@
         ></path>
       </symbol>
     </svg>
-    <script src="js/sliderServices.js"></script>
+    <script src="js/slider_services.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/map.js"></script>
     <script src="js/login.js"></script>
