--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 />
                 <label for="creditField">Кредит</label>
               </form>
-              <img class="services-form-line" src="img/line.png" height="279px" width= "10px" alt="line" />
+              <img class="services-form-line" src="img/line.png" height="279" width= "10" alt="line" />
             </div>
 
             <div
@@ -886,7 +886,7 @@
         ></path>
       </symbol>
     </svg>
-    <script src="js/slider_services.js"></script>
+    <script src="js/slider-services.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/map.js"></script>
     <script src="js/login.js"></script>
